server: better portviz and portstat

--- a/sner/server/templates/storage/service/portstat.html
+++ b/sner/server/templates/storage/service/portstat.html
@@ -3,26 +3,36 @@
 
 <h3>Stats</h3>
 <dl class="dl-horizontal">
-	{% for key, val in stats.items() %}
-	<dt>{{key}}</dt><dd>{{val}}</dd>
+	{% for proto, count in stats %}
+	<dt>{{ proto }}</dt><dd>{{ count }}</dd>
 	{% endfor %}
 </dl>
 
 {% if infos  %}
 <h3>Infos</h3>
-<ul>
-	{% for info in infos %}
-	<li>{{info[0]}}</li>
+<table class="table table-condensed table-hover borderless">
+<tbody>
+	{% for info, count in infos %}
+	<tr>
+		<td><a href="{{ url_for('storage.service_list_route', filter='Service.info=="%s"'|format(info)) }}">{{ info }}</a></td>
+		<td>{{ count }}</td>
+	</tr>
 	{% endfor %}
-</ul>
+</tbody>
+</table>
 {% endif %}
 
 <h3>Hosts</h3>
-<ul>
-	{% for host, host_id in hosts %}
-	<li><a href="{{ url_for('storage.host_view_route', host_id=host_id) }}">{{host}}</a></li>
+<table class="table table-condensed table-hover borderless">
+<tbody>
+	{% for host_address, host_hostname, host_id in hosts %}
+	<tr>
+		<td><a href="{{ url_for('storage.host_view_route', host_id=host_id) }}">{{ host_address }}</a></td>
+		<td>{{ host_hostname|default('', true) }}</td>
+	</tr>
 	{% endfor %}
-</ul>
+</tbody>
+</table>
 
 {% if comments  %}
 <h3>Comments</h3>
