server: add number of jobs in queue list view

--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -20,6 +20,7 @@
 			dt_column('priority'),
 			dt_column('active'),
 			dt_column('nr_targets'),
+			dt_column('nr_jobs'),
 			dt_column_buttons(scheduler_pagepart_queue_controls)
 		],
 		'drawCallback': function (settings) {
