server: storage.service grouped service.info view

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -288,6 +288,7 @@
 				<li><a href="{{ url_for('scheduler.job_list_route') }}">sch:Jobs</a></li>
 				<li><a href="{{ url_for('storage.host_list_route') }}">st:Hosts</a></li>
 				<li><a href="{{ url_for('storage.service_list_route') }}">st:Services</a></li>
+				<li><a href="{{ url_for('storage.service_grouped_route', crop=3) }}">st:Services grouped</a></li>
 				<li><a href="{{ url_for('storage.vuln_list_route') }}">st:Vulns</a></li>
 				<li><a href="{{ url_for('storage.vuln_grouped_route') }}">st:Vulns grouped</a></li>
 				<li><a href="{{ url_for('storage.note_list_route') }}">st:Notes</a></li>
