--- a/sner/server/templates/storage/pageparts.html
+++ b/sner/server/templates/storage/pageparts.html
@@ -17,6 +17,9 @@
 	<a class="btn btn-xs btn-default" href="{{> storage.service_edit_route service_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
 	<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> storage.service_delete_route service_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
 </script>
+<script id="storage.pagepart-service_list_filter_info_link.hbs" type="text/x-handlebars-template">
+	<a href='{{> storage.service_list_route_filter_info filter_value=info_encoded}}'>{{info}}</a>
+</script>
 
 <script id="storage.pagepart-vuln_link.hbs" type="text/x-handlebars-template">
 	<a href="{{> storage.vuln_view_route vuln_id=id}}">{{name}}</a>
@@ -34,7 +37,7 @@
 	<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> storage.vuln_delete_route vuln_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
 </script>
 <script id="storage.pagepart-vuln_list_filter_name_link.hbs" type="text/x-handlebars-template">
-	<a href='{{> storage.vuln_list_route_filter_name filter_value=name}}'>{{name}}</a>
+	<a href='{{> storage.vuln_list_route_filter_name filter_value=name_encoded}}'>{{name}}</a>
 </script>
 
 <script id="storage.pagepart-note_controls.hbs" type="text/x-handlebars-template">
@@ -85,6 +88,7 @@
 	Handlebars.registerPartial('storage.host_delete_route', Flask.url_for('storage.host_delete_route', {'host_id': '{%raw%}{{host_id}}{%endraw%}'}));
 
 	Handlebars.registerPartial('storage.service_add_route', Flask.url_for('storage.service_add_route', {'host_id': '{%raw%}{{host_id}}{%endraw%}'}));
+	Handlebars.registerPartial('storage.service_list_route_filter_info', Flask.url_for('storage.service_list_route', {'filter': '{%raw%}Service.info=="{{filter_value}}"{%endraw%}'}));
 	Handlebars.registerPartial('storage.service_edit_route', Flask.url_for('storage.service_edit_route', {'service_id': '{%raw%}{{service_id}}{%endraw%}'}));
 	Handlebars.registerPartial('storage.service_delete_route', Flask.url_for('storage.service_delete_route', {'service_id': '{%raw%}{{service_id}}{%endraw%}'}));
 
@@ -104,6 +108,7 @@
 	var storage_pagepart_host_controls = Handlebars.compile(document.getElementById('storage.pagepart-host_controls.hbs').innerHTML);
 
 	var storage_pagepart_service_controls = Handlebars.compile(document.getElementById('storage.pagepart-service_controls.hbs').innerHTML);
+	var storage_pagepart_service_list_filter_info_link = Handlebars.compile(document.getElementById('storage.pagepart-service_list_filter_info_link.hbs').innerHTML);
 
 	var storage_pagepart_vuln_link = Handlebars.compile(document.getElementById('storage.pagepart-vuln_link.hbs').innerHTML);
 	var storage_pagepart_severity_label = Handlebars.compile(document.getElementById('storage.pagepart-severity_label.hbs').innerHTML);
