--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -85,12 +85,15 @@
 
 		<div role="tabpanel" class="tab-pane" id="vulns">
 			<div id="host_view_vuln_table_toolbar" class="dt_toolbar">
-				<a class="btn btn-xs btn-default abutton_selectall">All</a>
-				<a class="btn btn-xs btn-default abutton_selectnone">None</a>
-				<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</a>
-				<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</a>
-				<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</a>
-				<a class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></a>
+				<div class="btn-group" role="group">
+					<a class="btn btn-xs btn-default disabled">filter:</a>
+					<a class="btn btn-xs btn-default abutton_selectall">All</a>
+					<a class="btn btn-xs btn-default abutton_selectnone">None</a>
+					<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</a>
+					<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</a>
+					<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</a>
+					<a class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></a>
+				</div>
 			</div>
 			<table id="host_view_vuln_table" class="table table-hover table-responsive table-condensed" width="100%"></table>
 			<script type="text/javascript">
