server: scheduler task list show number of queues

--- a/sner/server/templates/scheduler/task/list.html
+++ b/sner/server/templates/scheduler/task/list.html
@@ -10,6 +10,7 @@
 			dt_column('name'),
 			dt_column('module'),
 			dt_column('params'),
+			dt_column('nr_queues'),
 			dt_column_buttons(scheduler_pagepart_task_controls)
 		]
 	};
