--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -97,7 +97,7 @@
 		function sner_submit_form(url, data={}) {
 			data['csrf_token'] = $('meta[name="csrf-token"]').attr('content');
 			return $.ajax({"url": url,"type": "POST", "data": data})
-				.fail(function(xhr, status, exception) { toastr.error(xhr.responseJSON["title"]); });
+				.fail(function(xhr, status, exception) { toastr.error(xhr.hasOwnProperty('responseJSON') ? xhr.responseJSON["title"] : 'Request failed'); });
 		}
 
 		/*
