--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -86,13 +86,21 @@
 		<div role="tabpanel" class="tab-pane" id="vulns">
 			<div id="host_view_vuln_table_toolbar" class="dt_toolbar">
 				<div class="btn-group" role="group">
-					<a class="btn btn-xs btn-default disabled">filter:</a>
+					<a class="btn btn-xs btn-default disabled">action:</a>
 					<a class="btn btn-xs btn-default abutton_selectall">All</a>
 					<a class="btn btn-xs btn-default abutton_selectnone">None</a>
 					<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="info"><span class="glyphicon glyphicon-tag"></span> Info</a>
 					<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="report"><span class="glyphicon glyphicon-tag"></span> Report</a>
-					<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> TODO</a>
+					<a class="btn btn-xs btn-default abutton_tagmulti" data-tag="todo"><span class="glyphicon glyphicon-tag"></span> ToDo</a>
 					<a class="btn btn-xs btn-default abutton_deletemulti"><span class="glyphicon glyphicon-trash text-alert"></span></a>
+					<div class="btn-group">
+						<a class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></a>
+						<ul class="dropdown-menu">
+							<li><a class="abutton_untagmulti" data-tag="info">Untag Info</a></li>
+							<li><a class="abutton_untagmulti" data-tag="report">Untag Report</a></li>
+							<li><a class="abutton_untagmulti" data-tag="todo">Untag ToDo</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<table id="host_view_vuln_table" class="table table-hover table-responsive table-condensed" width="100%"></table>
@@ -121,8 +129,9 @@
 					var dt_host_view_vuln_table = $('#host_view_vuln_table').DataTable($.extend({}, dt_ajax_options, dt_host_view_vuln_table_options));
 					$('#host_view_vuln_table_toolbar .abutton_selectall').on('click', {'dt': dt_host_view_vuln_table}, action_selectall);
 					$('#host_view_vuln_table_toolbar .abutton_selectnone').on('click', {'dt': dt_host_view_vuln_table}, action_selectnone);
-					$('#host_view_vuln_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': "{{ url_for('storage.vuln_tag_by_id_route') }}"}, action_tag_by_id);
+					$('#host_view_vuln_table_toolbar .abutton_tagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_by_id_route'), 'action': 'set'}, action_tag_by_id);
 					$('#host_view_vuln_table_toolbar .abutton_deletemulti').on('click', {'dt': dt_host_view_vuln_table, 'url': "{{ url_for('storage.vuln_delete_by_id_route') }}"}, action_delete_by_id);
+					$('#host_view_vuln_table_toolbar .abutton_untagmulti').on('click', {'dt': dt_host_view_vuln_table, 'url': Flask.url_for('storage.vuln_tag_by_id_route'), 'action': 'unset'}, action_tag_by_id);
 				});
 			</script>
 		</div>
