--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -4,7 +4,7 @@
 {% block script %}
 <script type="text/javascript">
 	var dt_note_list_table_options = {
-		'ajax': {'url': "{{ url_for('storage.note_list_json_route') }}", 'method': 'POST'},
+		'ajax': {'url': "{{ url_for('storage.note_list_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
 			dt_column('id'),
 			dt_column('host_id', {'visible': false}),
@@ -25,7 +25,14 @@
 
 {% block content %}
 <div class="notes">
-	<h1>Notes list</h1>
+	<h1>Notes list{% if 'filter' in request.args %} <small><a class="btn btn-xs btn-info" href="{{ url_for('storage.note_list_route') }}">unfilter</a></small>{% endif %}</h1>
+
+	<div id="note_list_table_toolbar" class="dt_toolbar">
+		<div class="btn-group" role="group">
+			<a class="btn btn-xs btn-default disabled">filter:</a>
+			<a class="btn btn-xs btn-default" href="{{ url_for('storage.note_list_route', filter='Note.xtype not_ilike "nessus%"') }}">Not nessus</a>
+		</div>
+	</div>
 
 	<table id="note_list_table" class="table table-hover table-responsive table-condensed" width="100%"></table>
 </div>
