server: tagging features for vuln_view_route

--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -51,6 +51,11 @@
 		/* other */
 		.text-alert { color: red; }
 		.text-warning { color: orange; }
+		.text-default { color: black; }
+		.label-light {
+			color: unset;
+			background-color: #ccc;
+		}
 	</style>
 
 
