ui: 2fa enable missing simple guide (#183)

--- a/sner/server/templates/auth/profile/totp.html
+++ b/sner/server/templates/auth/profile/totp.html
@@ -10,6 +10,14 @@
 <div class="profile">
 	<h1>Two-factor authentication setup ({% if secret %}enable{% else %}disable{% endif %})</h1>
 
+	<div>
+		To enable two-factor authentication::
+		<ol>
+			<li>Scan the barcode or add the text seed to your authenticator.</li>
+			<li>Verify pairing with one code.</li>
+		</ol>
+	</div>
+
 	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 
