--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -6,7 +6,7 @@
 	var dt_note_list_table_options = {
 		'ajax': {'url': "{{ url_for('storage.note_list_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
-			dt_column('id'),
+			dt_column('id', {'visible': false}),
 			dt_column('host_id', {'visible': false}),
 			dt_column('host_address', {'render': function (data, type, row, meta) { return storage_pagepart_host_link(row); }}),
 			dt_column('host_hostname'),
