--- a/sner/server/templates/scheduler/excl/list.html
+++ b/sner/server/templates/scheduler/excl/list.html
@@ -6,7 +6,7 @@
 	var dt_excl_list_table_options = {
 		'ajax': {'url': "{{ url_for('scheduler.excl_list_json_route') }}", 'method': 'POST'},
 		'columns': [
-			dt_column('id'),
+			dt_column('id', {'visible': false}),
 			dt_column('family'),
 			dt_column('value'),
 			dt_column('comment'),
