--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -6,7 +6,7 @@
 	var dt_host_list_table_options = {
 		'ajax': {'url': "{{ url_for('storage.host_list_json_route') }}", 'method': 'POST'},
 		'columns': [
-			dt_column('id'),
+			dt_column('id', {'visible': false}),
 			dt_column('address', {'render': function (data, type, row, meta) { return storage_pagepart_host_link({'host_id': row['id'], 'host_address': row['address']}); }}),
 			dt_column('hostname'),
 			dt_column('os'),
