--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -9,7 +9,7 @@
 			dt_column('id', {'visible': false}),
 			dt_column('name'),
 			dt_column('task_id', {'visible': false}),
-			dt_column('task_name', {'render': function(data, type, row, meta) {return scheduler_pagepart_task_reference(row);}}),
+			dt_column('task_name'),
 			dt_column('group_size'),
 			dt_column('priority'),
 			dt_column('active'),
