--- a/sner/server/templates/storage/note/view.html
+++ b/sner/server/templates/storage/note/view.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="notes">
 	<h1>
-		Note {{ note.id }}
+		Note {{ note.host.address }} {{ note.xtype }}
 		<small>
 			<a class="btn btn-xs btn-default" href="{{ url_for('storage.note_edit_route', note_id=note.id) }}"><span class="glyphicon glyphicon-edit"></span></a>
 			{% with form=button_form, form_url=url_for('storage.note_delete_route', note_id=note.id) %}{% include 'button-delete.html' %}{% endwith %}
