--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -10,12 +10,12 @@
 		{{ form.csrf_token }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label">Host</label>
-			<div class="col-sm-10"><p class="form-control-static">{{ host }}</p></div>
+			<div class="col-sm-10"><p class="form-control-static">{{ host.address }} ({{ host.hostname }})</p></div>
 		</div>
 		{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label">Service</label>
-			<div class="col-sm-10"><p class="form-control-static">{{ service }}</p></div>
+			<div class="col-sm-10"><p class="form-control-static">{% if service %}{{ service.port }}/{{ service.proto }}{% endif %}</p></div>
 		</div>
 		{{ b_wtf.bootstrap_field(form.service_id, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
