--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -9,10 +9,12 @@
 	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 		<div class="form-group">
-			<label class="col-sm-2 control-label">Host</label>
+			<label class="col-sm-2 control-label"><a data-toggle="collapse" href="#host_id_collapse">Host</a></label>
 			<div class="col-sm-10"><p class="form-control-static">{{ host.address }} ({{ host.hostname }})</p></div>
 		</div>
-		{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
+		<div class="collapse" id="host_id_collapse">
+			{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
+		</div>
 		{{ b_wtf.bootstrap_field(form.proto, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.port, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.state, horizontal=True) }}
