--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -9,15 +9,13 @@
 	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
 		<div class="form-group">
-			<label class="col-sm-2 control-label">Host</label>
-			<div class="col-sm-10"><p class="form-control-static">{{ host.address }} ({{ host.hostname }})</p></div>
+			<label class="col-sm-2 control-label"><a data-toggle="collapse" href="#host_service_ids_collapse">Host, Service</a></label>
+			<div class="col-sm-10"><p class="form-control-static">{{ host.address }} ({{ host.hostname }}){% if service %} {{ service.port }}/{{ service.proto }}{% endif %}</p></div>
 		</div>
-		{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
-		<div class="form-group">
-			<label class="col-sm-2 control-label">Service</label>
-			<div class="col-sm-10"><p class="form-control-static">{% if service %}{{ service.port }}/{{ service.proto }}{% endif %}</p></div>
+		<div class="collapse" id="host_service_ids_collapse">
+			{{ b_wtf.bootstrap_field(form.host_id, horizontal=True) }}
+			{{ b_wtf.bootstrap_field(form.service_id, horizontal=True) }}
 		</div>
-		{{ b_wtf.bootstrap_field(form.service_id, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.name, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.xtype, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.severity, horizontal=True) }}
