--- a/sner/server/templates/auth/profile/changepassword.html
+++ b/sner/server/templates/auth/profile/changepassword.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Change password{% endblock %}
+
 {% block content %}
 <div class="profile">
 	<h1>Change password</h1>
