--- a/sner/server/templates/scheduler/excl/addedit.html
+++ b/sner/server/templates/scheduler/excl/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Exclusion add/edit{% endblock %}
+
 {% block content %}
 <div class="excls">
 	<h1>Exclustion add/edit</h1>
