--- a/sner/server/templates/scheduler/queue/enqueue.html
+++ b/sner/server/templates/scheduler/queue/enqueue.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Queue enqueue{% endblock %}
+
 {% block content %}
 <div class="queues">
 	<h1>Queue enqueue</h1>
