--- a/sner/server/templates/storage/host/addedit.html
+++ b/sner/server/templates/storage/host/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Host add/edit{% endblock %}
+
 {% block content %}
 <div class="hosts">
 	<h1>Host add/edit</h1>
