--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Service add/edit{% endblock %}
+
 {% block content %}
 <div class="services">
 	<h1>Service add/edit</h1>
