--- a/sner/server/templates/storage/service/vizports.html
+++ b/sner/server/templates/storage/service/vizports.html
@@ -1,6 +1,8 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% extends "base.html" %}
 
+{% block title %}Ports visualization{% endblock %}
+
 {% block style %}
 <style>
 /* fix scrollbar to prevet columns reflow when long content is pulled into #port_detail */
