--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Vuln add/edit{% endblock %}
+
 {% block content %}
 <div class="vulns">
 	<h1>Vuln add/edit</h1>
