--- a/sner/server/templates/auth/login.html
+++ b/sner/server/templates/auth/login.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Login{% endblock %}
+
 {% block content %}
 <div class="auths">
 	<h1>Login</h1>
