--- a/sner/server/templates/auth/login_totp.html
+++ b/sner/server/templates/auth/login_totp.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Login TOTP{% endblock %}
+
 {% block content %}
 <div class="auths">
 	<h1>Login with TOTP code (2FA)</h1>
