--- a/sner/server/templates/auth/login_webauthn.html
+++ b/sner/server/templates/auth/login_webauthn.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Login Webauthn{% endblock %}
+
 {% block script %}
 <script src="{{ url_for('static', filename='cbor/cbor.js') }}"></script>
 <script>
