--- a/sner/server/templates/auth/profile/index.html
+++ b/sner/server/templates/auth/profile/index.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}User profile{% endblock %}
+
 {% block script %}
 <script>
 	var dt_profile_webauthn_table_options = {
