--- a/sner/server/templates/auth/profile/webauthn_edit.html
+++ b/sner/server/templates/auth/profile/webauthn_edit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Webauthn credential edit{% endblock %}
+
 {% block content %}
 <div class="profile">
 	<h1>Webauthn credential</h1>
