--- a/sner/server/templates/auth/user/addedit.html
+++ b/sner/server/templates/auth/user/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}User add/edit{% endblock %}
+
 {% block style %}
 <style>
 #roles li { list-style-type: none; }
