--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="csrf-token" content="{{ csrf_token() }}">
-	<title>sner4 - {% block title %}{% endblock %}</title>
+	<title>{% block title %}{% endblock %} - sner4</title>
 
 
 	<script type="text/javascript" src="{{ url_for('static', filename='jquery/jquery-3.2.1.min.js') }}"></script>
