--- a/sner/server/templates/scheduler/excl/import.html
+++ b/sner/server/templates/scheduler/excl/import.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Exclusions import{% endblock %}
+
 {% block content %}
 <div class="excls">
 	<h1>Exclusions import</h1>
