--- a/sner/server/templates/scheduler/queue/addedit.html
+++ b/sner/server/templates/scheduler/queue/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Queue add/edit{% endblock %}
+
 {% block content %}
 <div class="queues">
 	<h1>Queue add/edit</h1>
