--- a/sner/server/templates/scheduler/task/addedit.html
+++ b/sner/server/templates/scheduler/task/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title %}Task add/edit{% endblock %}
+
 {% block content %}
 <div class="tasks">
 	<h1>Task add/edit</h1>
