--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -1,6 +1,8 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% extends "base.html" %}
 
+{% block title %}Host view {{ host.address }} ({{ host.hostname }}){% endblock %}
+
 {% block script %}
 <script type="text/javascript">
 	$(document).ready(function() {
