--- a/sner/server/templates/storage/host/vizdns.html
+++ b/sner/server/templates/storage/host/vizdns.html
@@ -1,6 +1,8 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% extends "base.html" %}
 
+{% block title %}DNS Tree visualization{% endblock %}
+
 {% block script %}
 <script src="{{ url_for('static', filename='d3/d3.min.js') }}"></script>
 {% endblock %}
