--- a/sner/server/templates/storage/note/addedit.html
+++ b/sner/server/templates/storage/note/addedit.html
@@ -2,6 +2,8 @@
 {% extends "base.html" %}
 {% import "bootstrap_wtf.html" as b_wtf %}
 
+{% block title%}Note add/edit{% endblock %}
+
 {% block content %}
 <div class="notes">
 	<h1>Note add/edit</h1>
