--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -1,6 +1,8 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% extends "base.html" %}
 
+{% block title %}Service list{% endblock %}
+
 {% block script %}
 <script type="text/javascript">
 	var dt_service_list_table_options = {
