--- a/sner/server/templates/storage/service/vizinfos.html
+++ b/sner/server/templates/storage/service/vizinfos.html
@@ -1,6 +1,8 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% extends "base.html" %}
 
+{% block title %}Service infos visualization{% endblock %}
+
 {% block script %}
 <script src="{{ url_for('static', filename='d3/d3.min.js') }}"></script>
 <script src="{{ url_for('static', filename='d3-cloud/d3.layout.cloud.js') }}"></script>
