--- a/sner/server/templates/storage/vuln/grouped.html
+++ b/sner/server/templates/storage/vuln/grouped.html
@@ -1,6 +1,8 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% extends "base.html" %}
 
+{% block title %}Vulns grouped{% endblock %}
+
 {% block script %}
 <script type="text/javascript">
 	var dt_vuln_grouped_table_options = {
