--- a/sner/server/templates/storage/pageparts.html
+++ b/sner/server/templates/storage/pageparts.html
@@ -4,17 +4,27 @@
 	<a href="{{> storage.host_view_route host_id=host_id}}">{{host_address}}</a>
 </script>
 <script id="storage.pagepart-host_controls.hbs" type="text/x-handlebars-template">
-	<a class="btn btn-xs btn-default" href="{{> storage.service_add_route host_id=id}}"><span class="glyphicon glyphicon-plus"></span> Service</a>
-	<a class="btn btn-xs btn-default" href="{{> storage.vuln_add_route model_name='host' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Vuln</a>
-	<a class="btn btn-xs btn-default" href="{{> storage.note_add_route model_name='host' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Note</a>
 	<a class="btn btn-xs btn-default" href="{{> storage.host_edit_route host_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
+	<div class="btn-group">
+		<a class="btn btn-xs btn-default dropdown-toggle host-controls-dropdown" data-toggle="dropdown"><span class="caret"></span></a>
+		<ul class="dropdown-menu dropdown-menu-right">
+			<li><a href="{{> storage.service_add_route host_id=id}}">Add service</a></li>
+			<li><a href="{{> storage.vuln_add_route model_name='host' model_id=id}}">Add vuln</a></li>
+			<li><a href="{{> storage.note_add_route model_name='host' model_id=id}}">Add note</a></li>
+		</ul>
+	</div>
 	<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> storage.host_delete_route host_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
 </script>
 
 <script id="storage.pagepart-service_controls.hbs" type="text/x-handlebars-template">
-	<a class="btn btn-xs btn-default" href="{{> storage.vuln_add_route model_name='service' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Vuln</a>
-	<a class="btn btn-xs btn-default" href="{{> storage.note_add_route model_name='service' model_id=id}}"><span class="glyphicon glyphicon-plus"></span> Note</a>
 	<a class="btn btn-xs btn-default" href="{{> storage.service_edit_route service_id=id}}"><span class="glyphicon glyphicon-edit"></span></a>
+	<div class="btn-group">
+		<a class="btn btn-xs btn-default dropdown-toggle service-controls-dropdown" data-toggle="dropdown"><span class="caret"></span></a>
+		<ul class="dropdown-menu dropdown-menu-right">
+			<li><a href="{{> storage.vuln_add_route model_name='service' model_id=id}}">Add vuln</a></li>
+			<li><a href="{{> storage.note_add_route model_name='service' model_id=id}}">Add note</a></li>
+		</ul>
+	</div>
 	<a class="btn btn-xs btn-default abutton_delete_by_url" data-url="{{> storage.service_delete_route service_id=id}}"><span class="glyphicon glyphicon-trash text-alert"></span></a>
 </script>
 <script id="storage.pagepart-service_list_filter_info_link.hbs" type="text/x-handlebars-template">
