--- a/sner/server/templates/storage/host/addedit.html
+++ b/sner/server/templates/storage/host/addedit.html
@@ -10,6 +10,7 @@
 
 	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
+		{{ form.return_url }}
 		{{ b_wtf.bootstrap_field(form.address, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.hostname, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.os, horizontal=True) }}
