--- a/sner/server/templates/storage/service/addedit.html
+++ b/sner/server/templates/storage/service/addedit.html
@@ -10,6 +10,7 @@
 
 	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
+		{{ form.return_url }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"><a data-toggle="collapse" href="#host_id_collapse">Host</a></label>
 			<div class="col-sm-10"><p class="form-control-static">{{ host.address }} ({{ host.hostname }})</p></div>
