--- a/sner/server/templates/storage/vuln/addedit.html
+++ b/sner/server/templates/storage/vuln/addedit.html
@@ -10,6 +10,7 @@
 
 	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
+		{{ form.return_url }}
 		<div class="form-group">
 			<label class="col-sm-2 control-label"><a data-toggle="collapse" href="#host_service_ids_collapse">Host, Service</a></label>
 			<div class="col-sm-10"><p class="form-control-static">{{ host.address }} ({{ host.hostname }}){% if service %} {{ service.port }}/{{ service.proto }}{% endif %}</p></div>
