server: disable referrer in ref links rendered in host.view::vuln and vuln.list datatables (#195)

--- a/sner/server/templates/storage/pageparts.html
+++ b/sner/server/templates/storage/pageparts.html
@@ -39,7 +39,7 @@
 </script>
 <script id="storage.pagepart-vuln_refs.hbs" type="text/x-handlebars-template">
 {{#each refs}}
-	<a href="{{url_for_ref this}}">{{text_for_ref this}}</a>
+	<a rel="noreferrer" href="{{url_for_ref this}}">{{text_for_ref this}}</a>
 {{/each}}
 </script>
 <script id="storage.pagepart-vuln_controls.hbs" type="text/x-handlebars-template">
