storge: storage/host/list does not pass filter argument from controller to template to json endpoint
https://gitlab.flab.cesnet.cz/bodik/sner4/issues/201

--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -6,7 +6,7 @@
 {% block script %}
 <script type="text/javascript">
 	var dt_host_list_table_options = {
-		'ajax': {'url': "{{ url_for('storage.host_list_json_route') }}", 'method': 'POST'},
+		'ajax': {'url': "{{ url_for('storage.host_list_json_route', **request.args) }}", 'method': 'POST'},
 		'columns': [
 			dt_column('id', {'visible': false}),
 			dt_column('address', {'render': function (data, type, row, meta) { return storage_pagepart_host_link({'host_id': row['id'], 'host_address': row['address']}); }}),
