--- a/sner/server/templates/auth/profile/changepassword.html
+++ b/sner/server/templates/auth/profile/changepassword.html
@@ -10,6 +10,7 @@
 
 	<form class="form-horizontal" method="post">
 		{{ form.csrf_token }}
+		{{ b_wtf.bootstrap_field(form.current_password, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.password1, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.password2, horizontal=True) }}
 		{{ b_wtf.bootstrap_field(form.submit, horizontal=True) }}
